Install workflow to generate MacOS ARM native binary image